fix: Fix extension on firefox

--- a/app/popup/style.css
+++ b/app/popup/style.css
@@ -17,7 +17,7 @@ body {
   border-radius: 4px;
   -webkit-box-shadow: 0px 0px 2px 0px rgba(108,128,136,0.4);
   box-shadow: 0px 0px 2px 0px rgba(108,128,136,0.4);
-  margin: 15px;
+  margin: 10px;
   background: white;
   text-align: left
 }
